# python-learning

./: ex19.py  guessTheNumber.py  main.py
automate/: rpsGame.py  (+3 more)
python-books/python_for_netsec/: pyproject.toml
python-books/python_for_netsec/chapters/: dicts.py
python-books/python_for_netsec/chapters/ch01/: Inheritance_simple.py  Untitled-1.ipynb  count_lines_chars.py  creating_file.py  dictionarymethods.ipynb  dicts.ipynb  dicts2.py  functions.py  get_exceptions_tree.py  inheritance_multilevel.py  inheritance_multiple.py  lists.py  main.py  my_functions.py  params_global_argparse.py  params_global_optparser.py  params_port_scanning.py  protocol.py  read_file_exception.py  read_file_properties.py  search_element_list.py  write_lines.py
python-books/python_for_netsec/chapters/ch02/: ProcessPool_concurrent_futures.py  ThreadPoolExecutor.py  ThreadPoolExecutor_urls.py  ThreadWorker.py  check_files_directory.py  count_files_directory.py  count_files_extension_directory.py  file_stats.py  get_file_extensions.py  get_os_environment_variables.py  list_directory.py  multiprocessing_process.py  os_interact.py  read_zip_file.py  subprocess_call.py  subprocess_exception.py  subprocess_input.py  subprocess_nmap.py  subprocess_ping.py  subprocess_ping_network.py  subprocess_program_checker.py  subprocess_setup_venv.py  subprocess_timeout.py  threadPoolConcurrency.py  threading_init.py  threading_join.py  threading_logging.py  threading_run.py
python-books/python_for_netsec/chapters/ch03/: socket_methods.py  socket_ports_open.py  socket_service_names.py  socket_web_server.py
(+46 files in other folders)
